resolve alignment

--- a/lisk-dex-electron/src/SignInModal.css
+++ b/lisk-dex-electron/src/SignInModal.css
@@ -20,7 +20,7 @@
 .close-btn {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 14px;
   font-size: 32px;
   cursor: pointer;
 }
